--- a/css/love.css
+++ b/css/love.css
@@ -185,3 +185,13 @@ body {
 
 /*---------------------- footer -------------------------*/
 
+@keyframes pulse {
+    from {
+        transform: translateX(-50%) scale(1);
+    }
+    to {
+        transform: translateX(-50%) scale(1.07);
+    }
+}
+
+
